--- a/index-7.html
+++ b/index-7.html
@@ -17,18 +17,27 @@
    <form>
     <fieldset class="Encadrement2">
      <legend class="Encadrement2">Adresse de livraison :</legend>
-     1.  Adresse: <input type="text"><br>
-     2.  Code postal: <input type="text"><br>
-     3.  Ville: <input type="text">
-    </fieldset>
-   </form>
+     <ol>
+       <li>Adresse: <textarea name="name" rows="6" cols="30"></textarea></li>
+        <li>Code Postal <input type="text"></li>
+         <li>Ville: <input type="text">
+       </fieldset>
+      </form>
+     </ol>
+
     <form>
      <fieldset class="Encadrement3">
       <legend class="Encadrement3">Information de réglement:</legend>
-     1. Type de carte bancaire:: <input type="text"><br>
-     2.  Numéro de carte: <input type="text"><br>
-     3. Code de sécurité: <input type="text"><br>
-     4. Nom du titulaire: <input type="text">
+        <ol>
+
+      <li></li>   Type de carte bancaire:<input type="text"><br>
+        <input type="radio" name="reponse" value="choix 1">Visa <br>
+        <input type="radio" name="reponse" value="choix 2">Mastercard<br>
+        <li>Numéro de carte: <input type="text"><br></li>
+        <li>Code de sécurité: <input type="text"><br></li>
+        <li>Nom du titulaire: <input type="text"></li>
+
+      </ol>
     </fieldset>
    </form>
   </body>
