--- a/index-7.html
+++ b/index-7.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <link rel="stylesheet"href="style.css">
     <title> Chrono-post</title>
   </head>
   <body>
     <form>
   <fieldset class="Encadrement1">
-    <legend class="Encadrement1">Votre identité:</legend>
-  1.  Nom: <input type="text"><br>
-  2.  Prénom: <input type="text"><br>
-  3.  adresse Email: <input type="text">
+    <legend class="Encadrement1">Votre identité</legend>
+  <ol>
+    <li>  Nom :<input type="Nom"  placeholder="Nom"></li>
+    <li>  Prénom : <input type="Prénom"  placeholder="Prénom"></li>
+    <li>  adresse Email : <input type="Adresse mail"  placeholder="Adresse mail"></li>
+  </ol>
   </fieldset>
 </form>
    <form>
     <fieldset class="Encadrement2">
-     <legend class="Encadrement2">Adresse de livraison :</legend>
+     <legend class="Encadrement2">Adresse de livraison</legend>
      <ol>
-       <li>Adresse: <textarea name="name" rows="6" cols="30"></textarea></li>
-        <li>Code Postal <input type="text"></li>
-         <li>Ville: <input type="text">
+        <li>Adresse : <textarea name="name" rows="6" cols="30"></textarea></li>
+        <li>Code Postal : <input type="Code postal"  placeholder="Code postal"></li>
+        <li>Ville : <input type="Ville"  placeholder="Ville">
        </fieldset>
       </form>
      </ol>
-
     <form>
      <fieldset class="Encadrement3">
-      <legend class="Encadrement3">Information de réglement:</legend>
+      <legend class="Encadrement3">Information de réglement</legend>
         <ol>
-
-      <li></li>   Type de carte bancaire:<input type="text"><br>
-        <input type="radio" name="reponse" value="choix 1">Visa <br>
-        <input type="radio" name="reponse" value="choix 2">Mastercard<br>
-        <li>Numéro de carte: <input type="text"><br></li>
-        <li>Code de sécurité: <input type="text"><br></li>
-        <li>Nom du titulaire: <input type="text"></li>
-
+      <li>Type de carte bancaire :<br /></li>
+         <input type="radio" name="reponse" value="choix 1">Visa <br>
+         <input type="radio" name="reponse" value="choix 2">Mastercard<br>
+         <li>Numéro de carte : <input type="Numéro de carte"  placeholder="Numéro de carte"></li>
+         <li>Code de sécurité : <input type="Code de sécurité"  placeholder="Code de sécurité"><br /></li>
+         <li>Nom du titulaire : <input type="Nom du titulaire"  placeholder="Nom du titulaire"></li>
       </ol>
     </fieldset>
    </form>
+  <button type="button">J'achète!</button>
   </body>
 </html>
